test/known_problems/should_pass/issue131.erl
-module(issue131).
-export([f/0]).
-spec f() -> #{ a := b } | undefined.
f() -> #{ a => b }.
