test/known_problems/should_fail/map_entry.erl
-module(map_entry).
-export([f/0]).

-spec f() -> #{bepa := apa}.
f() -> #{apa => bepa}.
